# lhf.pt

./: .gitignore  .gitmodules  .prettierignore  Cargo.toml  README.md  drizzle.config.json  flake.nix  index.html  package-lock.json  package.json  style.scss  svelte.config.js  unocss.config.ts  vercel.json  vite.config.ts
.github/workflows/: check.yaml  deploy.yaml  preview.yaml  production.yaml
blog/: config.toml  default.nix
blog/highlight_themes/: rose-pine.tmTheme
blog/public/: style.css
blog/sass/: _theme.scss  style.scss
blog/templates/: index.html
content/: about.md
content/posts/: first-post.md  test-post.md
content/posts/test/: test-post.md
migrations/: 0000_brainy_sebastian_shaw.sql  0000_sparkling_princess_powerful.sql  0001_amusing_catseye.sql  0002_calm_gwen_stacy.sql  migrate.js  migrate.ts
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
prisma/: schema.prisma
src/: app.html  app.rs  app_router.rs  config.rs  content.ts  lib.rs  markdown_page.rs  posts_index.rs  posts_router.rs  shims.d.ts
src/lib/: appearanceMode.ts  appearanceSerifs.ts
src/lib/components/: Analytics.svelte
src/lib/db/: schema.ts  utils.ts
src/lib/server/: database.ts
src/lib/stores/: checkedWritable.ts  mode.ts
src/pages/: post.rs
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
web/: config.toml
web/md_themes/: rose-pine.tmTheme
web/sass/: style.scss
web/static/: site.webmanifest
web/templates/: 404.html  atom.xml  base.html  index.html  macros.html  nav.html  post-page.html  posts.html
(+27 files in other folders)
