[package]
name = "lhf-pt"
description = "Luís Fonseca's personal website"
license = "UNLICENSE"
repository = "https://github.com/luishfonseca/lhf.pt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
