[package]
name = "lhf-pt"
description = "Luís Fonseca's personal website"
license = "UNLICENSE"
repository = "https://github.com/luishfonseca/lhf.pt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"

[dependencies]
gloo-net = "0.3.0"
gray_matter = "0.2.6"
lazy_static = "1.4.0"
log = "0.4.19"
pulldown-cmark = "0.9.3"
syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
